# AI

01.MLL/05.PromptTuning/: Prompt_tuning.ipynb
02.Data Analysis/01.Dealing with data and statistic/01.Pandas Intro/: Pandas_Intro.ipynb
02.Data Analysis/03.Data Visualization Matplotlib/: Matplotlib_Intro.ipynb
04.Computer Vision/01.OpenCV/: 02_Face_Detection.ipynb  README.md
04.Computer Vision/02.Larg Vision Models/: README.md
04.Computer Vision/03.Fine Tuing/: README.md
04.Computer Vision/Automatic Number Plate Recognition (ANPR)/: README.md  car_plate.ipynb
06.Agents/U01/: main.py  pyproject.toml  tax_client.py  tax_server.py
06.Agents/U02/: README.md  main.py  pyproject.toml  tax_client.py  tax_client_ollama.py  tax_server.py  tax_server_ollama.py
06.Agents/U03/: README.md  main.py  pyproject.toml  weather_client.py  weather_client_ollama.py  weather_server.py  weather_server_ollama.py
06.Agents/U04/: README.md  db_functions.py  ecommerce_Telegram_client.py  ecommerce_data.txt  ecommerce_server.py  main.py  pyproject.toml  setup_database.py
06.Agents/U05/: README.md  appointment_server.py  appointment_telegram_client.py  appointment_whatsapp_client.py  center_data.txt  main.py  pyproject.toml
06.Agents/U05/WhatsApp/: whatsapp_bot_test.py
06.Agents/U05/calendar_tools/: calendar_functions.py  calender_functions_test.py
06.Agents/U05/db_tools/: db_functions.py  db_functions_test.py
06.Agents/U05/email_tools/: email_functions.py  email_functions_test.py
06.Agents/U06/: main.py  pyproject.toml  zaetoon_helpers.py  zaetoon_helpers_test.py
(+43 files in other folders)
